fixed Bottom Spacing

--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 body {
   	padding: 0px;
-	padding-bottom: 0px;
+	padding-bottom: 50px;
 	margin: 0px;
 }
 
